# Workshlope

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  .prod-ts-env.example  .ts-env.example  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  compose-prod-ts.yml  compose-ts.yml  compose.ci-gha-cache.yml  compose.override.yml  compose.traefik.yml  compose.yml  deployment.md  development.md  entities.json  hello.py  mempalace.yaml  pyproject.toml  workshop_lessons_&_sessions_aa012042.plan.md
.cursor/: hooks.json
.cursor/hooks/: backend-pytest-precommit-guard.sh  docker-compose-env-local-guard.sh  git-branch-pr-guard.sh  playwright-precommit-guard.sh
.cursor/rules/: branch-pr-workflow.mdc  docker-compose-env-local.mdc  playwright-rules-testing.mdc
.github/workflows/: ci.yml  deploy-staging.yml  latest-changes.yml  playwright.yml  pre-commit.yml  test-backend.yml  test-docker-compose.yml
authjs-service/: .env.example  .gitignore  Dockerfile  README.md  auth.ts  next.config.mjs  package.json
authjs-service/app/: globals.css  layout.tsx  page.tsx
authjs-service/lib/: bridge-token.ts  theme-init-script.ts
authjs-service/scripts/: test-bridge-health.mjs
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/tests/: conftest.py  (+4 more)
frontend/: .env  .gitignore  Dockerfile  Dockerfile.playwright  README.md  biome.json  index.html  nginx-compose-api-proxy.conf  package.json  playwright.config.ts  playwright.global-setup.ts  tsconfig.json  vite.config.ts
scripts/: e2e-backend-reset.sh
tests/: test_cli.py
(+162 files in other folders)
